Add Set && Save Config  Features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
 # For Disable MSVC Visual C Dll
+if(MSVC)
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT")
 set(CMAKE_EXE_LINKER_FLAGS "
@@ -7,6 +8,7 @@ set(CMAKE_EXE_LINKER_FLAGS "
     /NODEFAULTLIB:msvcrt.lib msvcrtd.lib
     /NODEFAULTLIB:msvcrt.lib libcmt.lib
 ")
+endif()
 project(QuickConfig)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -18,6 +20,9 @@ set(LIB_PATH "${CMAKE_SOURCE_DIR}/lib")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${LIB_PATH})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${LIB_PATH})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${EXE_PATH})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_PATH})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_PATH})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXE_PATH})
 
 include_directories(include)
 
