--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,8 @@
         "xmemory": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "text_encoding": "cpp",
+        "*.tcc": "cpp"
     }
 }
